--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,14 @@
 
 .btn_theme {
     background-color: #4CD195;
+    padding: 10px 12px;
     color: #fff;
+    border-radius: 3px; 
+    border: none;
+}
+
+.text_theme {
+  color: #4CD195!important;
 }
 
 .btn_theme:hover {
@@ -19,7 +26,7 @@ a {
 
 a:hover {
   color: black;
-  text-decoration: none;
+  text-decoration: none!important;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -527,4 +534,13 @@ body {
   .sidebar-wrapper {
     width: 220px;
   }
+}
+
+/* Datatabl */
+.pagination .page-item.active .page-link {
+  background-color: #4CD195!important;
+}
+
+.create_form {
+  margin-bottom: 90px;
 }
